[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Level/Hub/Narrative enviorement/TemplateEnviorement.gd" type="Script" id=1]
[ext_resource path="res://Placeholders/General/Sp_Placeholder_white.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/SMALL PANALS/Small panal 1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/good timing bd.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/HORIZONTAL TAB BAR/Tab button default.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/HORIZONTAL TAB BAR/Tab button active.png" type="Texture" id=6]
[ext_resource path="res://Audio/MenuButton.mp3" type="AudioStream" id=7]
[ext_resource path="res://Audio/SwooshMenu.tres" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Game/ImprovedSound.gd" type="Script" id=9]
[ext_resource path="res://Placeholders/UI/e-key.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UI/ControllerSelected.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level/Hub/Narrative enviorement/EnviornmentCanvasLayer.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 78.0256

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="TemplateEnviorement" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.96046e-08, 0 )
scale = Vector2( 0.0358887, 0.0356445 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 12 )

[node name="Background" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0.54902 )
margin_left = -316.0
margin_top = -151.0
margin_right = 1230.0
margin_bottom = 786.0
texture = ExtResource( 2 )
expand = true

[node name="TextBackground" type="TextureRect" parent="CanvasLayer"]
margin_left = 245.0
margin_top = 73.0
margin_right = 781.0
margin_bottom = 459.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/TextBackground"]
margin_right = 536.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 2 )
text = "Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test Test 
Test Test Test Test Test Te
"
align = 1
valign = 1
autowrap = true

[node name="Button" type="TextureButton" parent="CanvasLayer"]
margin_left = 395.0
margin_top = 395.0
margin_right = 651.0
margin_bottom = 484.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer/Button"]
margin_left = 16.0
margin_top = 22.0
margin_right = 239.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "Got it"
align = 1

[node name="ControllerSelected" parent="CanvasLayer/Button" instance=ExtResource( 11 )]
visible = false
margin_left = -29.0
margin_top = -0.999001
margin_right = 135.0
margin_bottom = 117.001

[node name="Notification" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -132 )
scale = Vector2( 0.158333, 0.15 )
texture = ExtResource( 10 )

[node name="ControllerSelected" parent="." instance=ExtResource( 11 )]
visible = false
margin_top = -172.0
margin_bottom = -54.0

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Effects"
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HoverSound"]
anims/FadeIn = SubResource( 4 )
anims/FadeOut = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Effects"
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ButtonClickSound"]
anims/FadeIn = SubResource( 7 )
anims/FadeOut = SubResource( 8 )
anims/RESET = SubResource( 9 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
